GIS Subtask Fixes
* Replace null with isNull to only fetch incomplete subtasks
* Change alignment of row to better align dropdowns
* Add min-width to assignee to prevent it from getting squished on smaller screens

--- a/alcs-frontend/src/app/features/home/gis/gis-subtasks.component.scss
+++ b/alcs-frontend/src/app/features/home/gis/gis-subtasks.component.scss
@@ -51,6 +51,10 @@
   }
 }
 
+.assignee-column {
+  min-width: 200px;
+}
+
 .action-column {
   width: 40px;
   padding: 4px 16px 4px 28px;
